@@ -1,3 +1,8 @@
+2005-10-22  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclExecute.c (INST_INCR_*): fixed [Bug 1334570]. Obj
+	leak detection and patch by Eric Melbardis.
+
 2005-10-21  Kevin B. Kenny  <kennykb@acm.org>
 
 	* generic/tclStrToD.c (RefineApproximation): Plugged a memory leak
